# ballsdex-collector

./: README.md  pyproject.toml
collector/: LICENSE  admin.py  apps.py  models.py
collector/migrations/: 0001_initial.py  0002_collectortype_award_special.py
collector/package/: __init__.py  cog.py
docs/: admin.md  changelog.md  conf.py  how-it-works.md  index.md  installation.md  requirements.txt
