[project]
name = "collector"
version = "0.0.1"

description = "Collector package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "flare", email = "flare@ballsdex.com" },
]
readme = "README.md"

dependencies = [
    "ballsdex>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/flaree/ballsdex-collector"